// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidemenu renders Sidemenu correctly 1`] = `
<WithMooskinContext
  activeItem="/settings"
  className=""
  onClickItem={[MockFunction]}
  style={Object {}}
>
  <Component
    activeItem="/settings"
    className=""
    onClickItem={[MockFunction]}
    palette={
      Object {
        "actionsDropdown": Object {
          "backgroundColor": "#3fbaca",
          "fontColor": "#ffffff",
        },
        "anchor": Object {
          "disabledFontColor": "#9d9d9d",
          "fontColor": "#3fbaca",
        },
        "button": Object {
          "backgroundColor": "#3fbaca",
          "disabledBackgroundColor": "#e2e2e2",
          "fontColor": "#ffffff",
        },
        "commonElement": Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e2e2e2",
          "fontColor": "#293346",
        },
        "description": Object {
          "fontColor": "#9d9d9d",
        },
        "label": Object {
          "fontColor": "#2d2d2d",
        },
        "layout": Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e2e2e2",
          "fontColor": "#293346",
        },
        "main": Object {
          "backgroundColor": "#f7f7f7",
        },
        "toggleElement": Object {
          "backgroundColor": "#425579",
          "borderColor": "#e2e2e2",
          "fontColor": "#ffffff",
          "secondaryBackgroundColor": "#ffffff",
          "secondaryFontColor": "#9d9d9d",
        },
      }
    }
    style={Object {}}
  >
    <StyledSidemenu
      activeItem="/settings"
      className=""
      onClickItem={[MockFunction]}
      palette={
        Object {
          "actionsDropdown": Object {
            "backgroundColor": "#3fbaca",
            "fontColor": "#ffffff",
          },
          "anchor": Object {
            "disabledFontColor": "#9d9d9d",
            "fontColor": "#3fbaca",
          },
          "button": Object {
            "backgroundColor": "#3fbaca",
            "disabledBackgroundColor": "#e2e2e2",
            "fontColor": "#ffffff",
          },
          "commonElement": Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#e2e2e2",
            "fontColor": "#293346",
          },
          "description": Object {
            "fontColor": "#9d9d9d",
          },
          "label": Object {
            "fontColor": "#2d2d2d",
          },
          "layout": Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#e2e2e2",
            "fontColor": "#293346",
          },
          "main": Object {
            "backgroundColor": "#f7f7f7",
          },
          "toggleElement": Object {
            "backgroundColor": "#425579",
            "borderColor": "#e2e2e2",
            "fontColor": "#ffffff",
            "secondaryBackgroundColor": "#ffffff",
            "secondaryFontColor": "#9d9d9d",
          },
        }
      }
      style={Object {}}
    >
      <Box
        activeItem="/settings"
        className="sc-gtssRu DdNYS"
        onClickItem={[MockFunction]}
        palette={
          Object {
            "actionsDropdown": Object {
              "backgroundColor": "#3fbaca",
              "fontColor": "#ffffff",
            },
            "anchor": Object {
              "disabledFontColor": "#9d9d9d",
              "fontColor": "#3fbaca",
            },
            "button": Object {
              "backgroundColor": "#3fbaca",
              "disabledBackgroundColor": "#e2e2e2",
              "fontColor": "#ffffff",
            },
            "commonElement": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#e2e2e2",
              "fontColor": "#293346",
            },
            "description": Object {
              "fontColor": "#9d9d9d",
            },
            "label": Object {
              "fontColor": "#2d2d2d",
            },
            "layout": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#e2e2e2",
              "fontColor": "#293346",
            },
            "main": Object {
              "backgroundColor": "#f7f7f7",
            },
            "toggleElement": Object {
              "backgroundColor": "#425579",
              "borderColor": "#e2e2e2",
              "fontColor": "#ffffff",
              "secondaryBackgroundColor": "#ffffff",
              "secondaryFontColor": "#9d9d9d",
            },
          }
        }
        style={Object {}}
      >
        <Component
          activeItem="/settings"
          className="sc-gtssRu DdNYS"
          onClickItem={[MockFunction]}
          palette={
            Object {
              "actionsDropdown": Object {
                "backgroundColor": "#3fbaca",
                "fontColor": "#ffffff",
              },
              "anchor": Object {
                "disabledFontColor": "#9d9d9d",
                "fontColor": "#3fbaca",
              },
              "button": Object {
                "backgroundColor": "#3fbaca",
                "disabledBackgroundColor": "#e2e2e2",
                "fontColor": "#ffffff",
              },
              "commonElement": Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e2e2e2",
                "fontColor": "#293346",
              },
              "description": Object {
                "fontColor": "#9d9d9d",
              },
              "label": Object {
                "fontColor": "#2d2d2d",
              },
              "layout": Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e2e2e2",
                "fontColor": "#293346",
              },
              "main": Object {
                "backgroundColor": "#f7f7f7",
              },
              "toggleElement": Object {
                "backgroundColor": "#425579",
                "borderColor": "#e2e2e2",
                "fontColor": "#ffffff",
                "secondaryBackgroundColor": "#ffffff",
                "secondaryFontColor": "#9d9d9d",
              },
            }
          }
          style={Object {}}
        >
          <StyledBox
            activeItem="/settings"
            className="sc-gtssRu DdNYS"
            onClickItem={[MockFunction]}
            palette={
              Object {
                "actionsDropdown": Object {
                  "backgroundColor": "#3fbaca",
                  "fontColor": "#ffffff",
                },
                "anchor": Object {
                  "disabledFontColor": "#9d9d9d",
                  "fontColor": "#3fbaca",
                },
                "button": Object {
                  "backgroundColor": "#3fbaca",
                  "disabledBackgroundColor": "#e2e2e2",
                  "fontColor": "#ffffff",
                },
                "commonElement": Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#293346",
                },
                "description": Object {
                  "fontColor": "#9d9d9d",
                },
                "label": Object {
                  "fontColor": "#2d2d2d",
                },
                "layout": Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#293346",
                },
                "main": Object {
                  "backgroundColor": "#f7f7f7",
                },
                "toggleElement": Object {
                  "backgroundColor": "#425579",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#ffffff",
                  "secondaryBackgroundColor": "#ffffff",
                  "secondaryFontColor": "#9d9d9d",
                },
              }
            }
            style={Object {}}
          >
            <div
              className="sc-bdnylx kBsmpR sc-gtssRu DdNYS"
              onClickItem={[MockFunction]}
              style={Object {}}
            >
              <WithMooskinContext
                active={true}
                className=""
                key="0/.0"
                onClick={[Function]}
                style={Object {}}
                value="/settings"
              >
                <Component
                  active={true}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "actionsDropdown": Object {
                        "backgroundColor": "#3fbaca",
                        "fontColor": "#ffffff",
                      },
                      "anchor": Object {
                        "disabledFontColor": "#9d9d9d",
                        "fontColor": "#3fbaca",
                      },
                      "button": Object {
                        "backgroundColor": "#3fbaca",
                        "disabledBackgroundColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                      },
                      "commonElement": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "description": Object {
                        "fontColor": "#9d9d9d",
                      },
                      "label": Object {
                        "fontColor": "#2d2d2d",
                      },
                      "layout": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "main": Object {
                        "backgroundColor": "#f7f7f7",
                      },
                      "toggleElement": Object {
                        "backgroundColor": "#425579",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                        "secondaryBackgroundColor": "#ffffff",
                        "secondaryFontColor": "#9d9d9d",
                      },
                    }
                  }
                  style={Object {}}
                  value="/settings"
                >
                  <StyledSidemenuItem
                    active={true}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "actionsDropdown": Object {
                          "backgroundColor": "#3fbaca",
                          "fontColor": "#ffffff",
                        },
                        "anchor": Object {
                          "disabledFontColor": "#9d9d9d",
                          "fontColor": "#3fbaca",
                        },
                        "button": Object {
                          "backgroundColor": "#3fbaca",
                          "disabledBackgroundColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                        },
                        "commonElement": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "description": Object {
                          "fontColor": "#9d9d9d",
                        },
                        "label": Object {
                          "fontColor": "#2d2d2d",
                        },
                        "layout": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "main": Object {
                          "backgroundColor": "#f7f7f7",
                        },
                        "toggleElement": Object {
                          "backgroundColor": "#425579",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                          "secondaryBackgroundColor": "#ffffff",
                          "secondaryFontColor": "#9d9d9d",
                        },
                      }
                    }
                    style={Object {}}
                    value="/settings"
                  >
                    <Box
                      active={true}
                      className="sc-dlnjPT ftxAcv"
                      onClick={[Function]}
                      palette={
                        Object {
                          "actionsDropdown": Object {
                            "backgroundColor": "#3fbaca",
                            "fontColor": "#ffffff",
                          },
                          "anchor": Object {
                            "disabledFontColor": "#9d9d9d",
                            "fontColor": "#3fbaca",
                          },
                          "button": Object {
                            "backgroundColor": "#3fbaca",
                            "disabledBackgroundColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                          },
                          "commonElement": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "description": Object {
                            "fontColor": "#9d9d9d",
                          },
                          "label": Object {
                            "fontColor": "#2d2d2d",
                          },
                          "layout": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "main": Object {
                            "backgroundColor": "#f7f7f7",
                          },
                          "toggleElement": Object {
                            "backgroundColor": "#425579",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                            "secondaryBackgroundColor": "#ffffff",
                            "secondaryFontColor": "#9d9d9d",
                          },
                        }
                      }
                      style={Object {}}
                      value="/settings"
                    >
                      <Component
                        active={true}
                        className="sc-dlnjPT ftxAcv"
                        onClick={[Function]}
                        palette={
                          Object {
                            "actionsDropdown": Object {
                              "backgroundColor": "#3fbaca",
                              "fontColor": "#ffffff",
                            },
                            "anchor": Object {
                              "disabledFontColor": "#9d9d9d",
                              "fontColor": "#3fbaca",
                            },
                            "button": Object {
                              "backgroundColor": "#3fbaca",
                              "disabledBackgroundColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                            },
                            "commonElement": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "description": Object {
                              "fontColor": "#9d9d9d",
                            },
                            "label": Object {
                              "fontColor": "#2d2d2d",
                            },
                            "layout": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "main": Object {
                              "backgroundColor": "#f7f7f7",
                            },
                            "toggleElement": Object {
                              "backgroundColor": "#425579",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                              "secondaryBackgroundColor": "#ffffff",
                              "secondaryFontColor": "#9d9d9d",
                            },
                          }
                        }
                        style={Object {}}
                        value="/settings"
                      >
                        <StyledBox
                          active={true}
                          className="sc-dlnjPT ftxAcv"
                          onClick={[Function]}
                          palette={
                            Object {
                              "actionsDropdown": Object {
                                "backgroundColor": "#3fbaca",
                                "fontColor": "#ffffff",
                              },
                              "anchor": Object {
                                "disabledFontColor": "#9d9d9d",
                                "fontColor": "#3fbaca",
                              },
                              "button": Object {
                                "backgroundColor": "#3fbaca",
                                "disabledBackgroundColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                              },
                              "commonElement": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "description": Object {
                                "fontColor": "#9d9d9d",
                              },
                              "label": Object {
                                "fontColor": "#2d2d2d",
                              },
                              "layout": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "main": Object {
                                "backgroundColor": "#f7f7f7",
                              },
                              "toggleElement": Object {
                                "backgroundColor": "#425579",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                                "secondaryBackgroundColor": "#ffffff",
                                "secondaryFontColor": "#9d9d9d",
                              },
                            }
                          }
                          style={Object {}}
                          value="/settings"
                        >
                          <div
                            className="sc-bdnylx kBsmpR sc-dlnjPT ftxAcv"
                            onClick={[Function]}
                            style={Object {}}
                            value="/settings"
                          >
                            Settings
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSidemenuItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="1/.1"
                onClick={[Function]}
                style={Object {}}
                value="/template"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "actionsDropdown": Object {
                        "backgroundColor": "#3fbaca",
                        "fontColor": "#ffffff",
                      },
                      "anchor": Object {
                        "disabledFontColor": "#9d9d9d",
                        "fontColor": "#3fbaca",
                      },
                      "button": Object {
                        "backgroundColor": "#3fbaca",
                        "disabledBackgroundColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                      },
                      "commonElement": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "description": Object {
                        "fontColor": "#9d9d9d",
                      },
                      "label": Object {
                        "fontColor": "#2d2d2d",
                      },
                      "layout": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "main": Object {
                        "backgroundColor": "#f7f7f7",
                      },
                      "toggleElement": Object {
                        "backgroundColor": "#425579",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                        "secondaryBackgroundColor": "#ffffff",
                        "secondaryFontColor": "#9d9d9d",
                      },
                    }
                  }
                  style={Object {}}
                  value="/template"
                >
                  <StyledSidemenuItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "actionsDropdown": Object {
                          "backgroundColor": "#3fbaca",
                          "fontColor": "#ffffff",
                        },
                        "anchor": Object {
                          "disabledFontColor": "#9d9d9d",
                          "fontColor": "#3fbaca",
                        },
                        "button": Object {
                          "backgroundColor": "#3fbaca",
                          "disabledBackgroundColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                        },
                        "commonElement": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "description": Object {
                          "fontColor": "#9d9d9d",
                        },
                        "label": Object {
                          "fontColor": "#2d2d2d",
                        },
                        "layout": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "main": Object {
                          "backgroundColor": "#f7f7f7",
                        },
                        "toggleElement": Object {
                          "backgroundColor": "#425579",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                          "secondaryBackgroundColor": "#ffffff",
                          "secondaryFontColor": "#9d9d9d",
                        },
                      }
                    }
                    style={Object {}}
                    value="/template"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT dRYWAZ"
                      onClick={[Function]}
                      palette={
                        Object {
                          "actionsDropdown": Object {
                            "backgroundColor": "#3fbaca",
                            "fontColor": "#ffffff",
                          },
                          "anchor": Object {
                            "disabledFontColor": "#9d9d9d",
                            "fontColor": "#3fbaca",
                          },
                          "button": Object {
                            "backgroundColor": "#3fbaca",
                            "disabledBackgroundColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                          },
                          "commonElement": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "description": Object {
                            "fontColor": "#9d9d9d",
                          },
                          "label": Object {
                            "fontColor": "#2d2d2d",
                          },
                          "layout": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "main": Object {
                            "backgroundColor": "#f7f7f7",
                          },
                          "toggleElement": Object {
                            "backgroundColor": "#425579",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                            "secondaryBackgroundColor": "#ffffff",
                            "secondaryFontColor": "#9d9d9d",
                          },
                        }
                      }
                      style={Object {}}
                      value="/template"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT dRYWAZ"
                        onClick={[Function]}
                        palette={
                          Object {
                            "actionsDropdown": Object {
                              "backgroundColor": "#3fbaca",
                              "fontColor": "#ffffff",
                            },
                            "anchor": Object {
                              "disabledFontColor": "#9d9d9d",
                              "fontColor": "#3fbaca",
                            },
                            "button": Object {
                              "backgroundColor": "#3fbaca",
                              "disabledBackgroundColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                            },
                            "commonElement": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "description": Object {
                              "fontColor": "#9d9d9d",
                            },
                            "label": Object {
                              "fontColor": "#2d2d2d",
                            },
                            "layout": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "main": Object {
                              "backgroundColor": "#f7f7f7",
                            },
                            "toggleElement": Object {
                              "backgroundColor": "#425579",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                              "secondaryBackgroundColor": "#ffffff",
                              "secondaryFontColor": "#9d9d9d",
                            },
                          }
                        }
                        style={Object {}}
                        value="/template"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT dRYWAZ"
                          onClick={[Function]}
                          palette={
                            Object {
                              "actionsDropdown": Object {
                                "backgroundColor": "#3fbaca",
                                "fontColor": "#ffffff",
                              },
                              "anchor": Object {
                                "disabledFontColor": "#9d9d9d",
                                "fontColor": "#3fbaca",
                              },
                              "button": Object {
                                "backgroundColor": "#3fbaca",
                                "disabledBackgroundColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                              },
                              "commonElement": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "description": Object {
                                "fontColor": "#9d9d9d",
                              },
                              "label": Object {
                                "fontColor": "#2d2d2d",
                              },
                              "layout": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "main": Object {
                                "backgroundColor": "#f7f7f7",
                              },
                              "toggleElement": Object {
                                "backgroundColor": "#425579",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                                "secondaryBackgroundColor": "#ffffff",
                                "secondaryFontColor": "#9d9d9d",
                              },
                            }
                          }
                          style={Object {}}
                          value="/template"
                        >
                          <div
                            className="sc-bdnylx kBsmpR sc-dlnjPT dRYWAZ"
                            onClick={[Function]}
                            style={Object {}}
                            value="/template"
                          >
                            Template
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSidemenuItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="2/.2"
                onClick={[Function]}
                style={Object {}}
                value="/preview"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "actionsDropdown": Object {
                        "backgroundColor": "#3fbaca",
                        "fontColor": "#ffffff",
                      },
                      "anchor": Object {
                        "disabledFontColor": "#9d9d9d",
                        "fontColor": "#3fbaca",
                      },
                      "button": Object {
                        "backgroundColor": "#3fbaca",
                        "disabledBackgroundColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                      },
                      "commonElement": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "description": Object {
                        "fontColor": "#9d9d9d",
                      },
                      "label": Object {
                        "fontColor": "#2d2d2d",
                      },
                      "layout": Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#293346",
                      },
                      "main": Object {
                        "backgroundColor": "#f7f7f7",
                      },
                      "toggleElement": Object {
                        "backgroundColor": "#425579",
                        "borderColor": "#e2e2e2",
                        "fontColor": "#ffffff",
                        "secondaryBackgroundColor": "#ffffff",
                        "secondaryFontColor": "#9d9d9d",
                      },
                    }
                  }
                  style={Object {}}
                  value="/preview"
                >
                  <StyledSidemenuItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "actionsDropdown": Object {
                          "backgroundColor": "#3fbaca",
                          "fontColor": "#ffffff",
                        },
                        "anchor": Object {
                          "disabledFontColor": "#9d9d9d",
                          "fontColor": "#3fbaca",
                        },
                        "button": Object {
                          "backgroundColor": "#3fbaca",
                          "disabledBackgroundColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                        },
                        "commonElement": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "description": Object {
                          "fontColor": "#9d9d9d",
                        },
                        "label": Object {
                          "fontColor": "#2d2d2d",
                        },
                        "layout": Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#293346",
                        },
                        "main": Object {
                          "backgroundColor": "#f7f7f7",
                        },
                        "toggleElement": Object {
                          "backgroundColor": "#425579",
                          "borderColor": "#e2e2e2",
                          "fontColor": "#ffffff",
                          "secondaryBackgroundColor": "#ffffff",
                          "secondaryFontColor": "#9d9d9d",
                        },
                      }
                    }
                    style={Object {}}
                    value="/preview"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT dRYWAZ"
                      onClick={[Function]}
                      palette={
                        Object {
                          "actionsDropdown": Object {
                            "backgroundColor": "#3fbaca",
                            "fontColor": "#ffffff",
                          },
                          "anchor": Object {
                            "disabledFontColor": "#9d9d9d",
                            "fontColor": "#3fbaca",
                          },
                          "button": Object {
                            "backgroundColor": "#3fbaca",
                            "disabledBackgroundColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                          },
                          "commonElement": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "description": Object {
                            "fontColor": "#9d9d9d",
                          },
                          "label": Object {
                            "fontColor": "#2d2d2d",
                          },
                          "layout": Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#293346",
                          },
                          "main": Object {
                            "backgroundColor": "#f7f7f7",
                          },
                          "toggleElement": Object {
                            "backgroundColor": "#425579",
                            "borderColor": "#e2e2e2",
                            "fontColor": "#ffffff",
                            "secondaryBackgroundColor": "#ffffff",
                            "secondaryFontColor": "#9d9d9d",
                          },
                        }
                      }
                      style={Object {}}
                      value="/preview"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT dRYWAZ"
                        onClick={[Function]}
                        palette={
                          Object {
                            "actionsDropdown": Object {
                              "backgroundColor": "#3fbaca",
                              "fontColor": "#ffffff",
                            },
                            "anchor": Object {
                              "disabledFontColor": "#9d9d9d",
                              "fontColor": "#3fbaca",
                            },
                            "button": Object {
                              "backgroundColor": "#3fbaca",
                              "disabledBackgroundColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                            },
                            "commonElement": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "description": Object {
                              "fontColor": "#9d9d9d",
                            },
                            "label": Object {
                              "fontColor": "#2d2d2d",
                            },
                            "layout": Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#293346",
                            },
                            "main": Object {
                              "backgroundColor": "#f7f7f7",
                            },
                            "toggleElement": Object {
                              "backgroundColor": "#425579",
                              "borderColor": "#e2e2e2",
                              "fontColor": "#ffffff",
                              "secondaryBackgroundColor": "#ffffff",
                              "secondaryFontColor": "#9d9d9d",
                            },
                          }
                        }
                        style={Object {}}
                        value="/preview"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT dRYWAZ"
                          onClick={[Function]}
                          palette={
                            Object {
                              "actionsDropdown": Object {
                                "backgroundColor": "#3fbaca",
                                "fontColor": "#ffffff",
                              },
                              "anchor": Object {
                                "disabledFontColor": "#9d9d9d",
                                "fontColor": "#3fbaca",
                              },
                              "button": Object {
                                "backgroundColor": "#3fbaca",
                                "disabledBackgroundColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                              },
                              "commonElement": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "description": Object {
                                "fontColor": "#9d9d9d",
                              },
                              "label": Object {
                                "fontColor": "#2d2d2d",
                              },
                              "layout": Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#293346",
                              },
                              "main": Object {
                                "backgroundColor": "#f7f7f7",
                              },
                              "toggleElement": Object {
                                "backgroundColor": "#425579",
                                "borderColor": "#e2e2e2",
                                "fontColor": "#ffffff",
                                "secondaryBackgroundColor": "#ffffff",
                                "secondaryFontColor": "#9d9d9d",
                              },
                            }
                          }
                          style={Object {}}
                          value="/preview"
                        >
                          <div
                            className="sc-bdnylx kBsmpR sc-dlnjPT dRYWAZ"
                            onClick={[Function]}
                            style={Object {}}
                            value="/preview"
                          >
                            Preview
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSidemenuItem>
                </Component>
              </WithMooskinContext>
            </div>
          </StyledBox>
        </Component>
      </Box>
    </StyledSidemenu>
  </Component>
</WithMooskinContext>
`;

exports[`Sidemenu renders SidemenuItem correctly 1`] = `
<WithMooskinContext
  active={true}
  className="myClass"
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <Component
    active={true}
    className="myClass"
    onClick={[MockFunction]}
    palette={
      Object {
        "actionsDropdown": Object {
          "backgroundColor": "#3fbaca",
          "fontColor": "#ffffff",
        },
        "anchor": Object {
          "disabledFontColor": "#9d9d9d",
          "fontColor": "#3fbaca",
        },
        "button": Object {
          "backgroundColor": "#3fbaca",
          "disabledBackgroundColor": "#e2e2e2",
          "fontColor": "#ffffff",
        },
        "commonElement": Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e2e2e2",
          "fontColor": "#293346",
        },
        "description": Object {
          "fontColor": "#9d9d9d",
        },
        "label": Object {
          "fontColor": "#2d2d2d",
        },
        "layout": Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e2e2e2",
          "fontColor": "#293346",
        },
        "main": Object {
          "backgroundColor": "#f7f7f7",
        },
        "toggleElement": Object {
          "backgroundColor": "#425579",
          "borderColor": "#e2e2e2",
          "fontColor": "#ffffff",
          "secondaryBackgroundColor": "#ffffff",
          "secondaryFontColor": "#9d9d9d",
        },
      }
    }
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <StyledSidemenuItem
      active={true}
      className="myClass"
      onClick={[MockFunction]}
      palette={
        Object {
          "actionsDropdown": Object {
            "backgroundColor": "#3fbaca",
            "fontColor": "#ffffff",
          },
          "anchor": Object {
            "disabledFontColor": "#9d9d9d",
            "fontColor": "#3fbaca",
          },
          "button": Object {
            "backgroundColor": "#3fbaca",
            "disabledBackgroundColor": "#e2e2e2",
            "fontColor": "#ffffff",
          },
          "commonElement": Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#e2e2e2",
            "fontColor": "#293346",
          },
          "description": Object {
            "fontColor": "#9d9d9d",
          },
          "label": Object {
            "fontColor": "#2d2d2d",
          },
          "layout": Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#e2e2e2",
            "fontColor": "#293346",
          },
          "main": Object {
            "backgroundColor": "#f7f7f7",
          },
          "toggleElement": Object {
            "backgroundColor": "#425579",
            "borderColor": "#e2e2e2",
            "fontColor": "#ffffff",
            "secondaryBackgroundColor": "#ffffff",
            "secondaryFontColor": "#9d9d9d",
          },
        }
      }
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <Box
        active={true}
        className="sc-dlnjPT ftxAcv myClass"
        onClick={[MockFunction]}
        palette={
          Object {
            "actionsDropdown": Object {
              "backgroundColor": "#3fbaca",
              "fontColor": "#ffffff",
            },
            "anchor": Object {
              "disabledFontColor": "#9d9d9d",
              "fontColor": "#3fbaca",
            },
            "button": Object {
              "backgroundColor": "#3fbaca",
              "disabledBackgroundColor": "#e2e2e2",
              "fontColor": "#ffffff",
            },
            "commonElement": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#e2e2e2",
              "fontColor": "#293346",
            },
            "description": Object {
              "fontColor": "#9d9d9d",
            },
            "label": Object {
              "fontColor": "#2d2d2d",
            },
            "layout": Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#e2e2e2",
              "fontColor": "#293346",
            },
            "main": Object {
              "backgroundColor": "#f7f7f7",
            },
            "toggleElement": Object {
              "backgroundColor": "#425579",
              "borderColor": "#e2e2e2",
              "fontColor": "#ffffff",
              "secondaryBackgroundColor": "#ffffff",
              "secondaryFontColor": "#9d9d9d",
            },
          }
        }
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <Component
          active={true}
          className="sc-dlnjPT ftxAcv myClass"
          onClick={[MockFunction]}
          palette={
            Object {
              "actionsDropdown": Object {
                "backgroundColor": "#3fbaca",
                "fontColor": "#ffffff",
              },
              "anchor": Object {
                "disabledFontColor": "#9d9d9d",
                "fontColor": "#3fbaca",
              },
              "button": Object {
                "backgroundColor": "#3fbaca",
                "disabledBackgroundColor": "#e2e2e2",
                "fontColor": "#ffffff",
              },
              "commonElement": Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e2e2e2",
                "fontColor": "#293346",
              },
              "description": Object {
                "fontColor": "#9d9d9d",
              },
              "label": Object {
                "fontColor": "#2d2d2d",
              },
              "layout": Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e2e2e2",
                "fontColor": "#293346",
              },
              "main": Object {
                "backgroundColor": "#f7f7f7",
              },
              "toggleElement": Object {
                "backgroundColor": "#425579",
                "borderColor": "#e2e2e2",
                "fontColor": "#ffffff",
                "secondaryBackgroundColor": "#ffffff",
                "secondaryFontColor": "#9d9d9d",
              },
            }
          }
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <StyledBox
            active={true}
            className="sc-dlnjPT ftxAcv myClass"
            onClick={[MockFunction]}
            palette={
              Object {
                "actionsDropdown": Object {
                  "backgroundColor": "#3fbaca",
                  "fontColor": "#ffffff",
                },
                "anchor": Object {
                  "disabledFontColor": "#9d9d9d",
                  "fontColor": "#3fbaca",
                },
                "button": Object {
                  "backgroundColor": "#3fbaca",
                  "disabledBackgroundColor": "#e2e2e2",
                  "fontColor": "#ffffff",
                },
                "commonElement": Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#293346",
                },
                "description": Object {
                  "fontColor": "#9d9d9d",
                },
                "label": Object {
                  "fontColor": "#2d2d2d",
                },
                "layout": Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#293346",
                },
                "main": Object {
                  "backgroundColor": "#f7f7f7",
                },
                "toggleElement": Object {
                  "backgroundColor": "#425579",
                  "borderColor": "#e2e2e2",
                  "fontColor": "#ffffff",
                  "secondaryBackgroundColor": "#ffffff",
                  "secondaryFontColor": "#9d9d9d",
                },
              }
            }
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <div
              className="sc-bdnylx kBsmpR sc-dlnjPT ftxAcv myClass"
              onClick={[MockFunction]}
              style={
                Object {
                  "color": "blue",
                }
              }
            />
          </StyledBox>
        </Component>
      </Box>
    </StyledSidemenuItem>
  </Component>
</WithMooskinContext>
`;
